--- a/BrightID-rn/ios/BrightID.xcodeproj/xcshareddata/xcschemes/BrightID.xcscheme
+++ b/BrightID-rn/ios/BrightID.xcodeproj/xcshareddata/xcschemes/BrightID.xcscheme
@@ -99,6 +99,13 @@
             ReferencedContainer = "container:BrightID.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
