--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -24,6 +24,7 @@
     "constants-browserify": "^1.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.1.1",
+    "emittery": "^0.4.1",
     "events": "^1.0.0",
     "https-browserify": "~0.0.0",
     "mitt": "^1.1.3",
@@ -86,6 +87,7 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.0.1",
     "jest": "23.6.0",
+    "lint-staged": "^7.3.0",
     "metro-react-native-babel-preset": "0.48.0",
     "prettier": "^1.14.3",
     "react-test-renderer": "16.5.0",
