--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "fix": "rn-nodeify --hack",
-    "postinstall": "rn-nodeify --hack",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -17,46 +15,27 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
     "@react-native-community/masked-view": "^0.1.6",
-    "@tradle/react-native-http": "^2.0.0",
     "apisauce": "^1.1.1",
-    "assert": "^1.1.1",
-    "asyncstorage-down": "^4.2.0",
     "base64-js": "^1.3.0",
-    "browserify-zlib": "~0.1.4",
     "buffer": "^5.2.1",
-    "console-browserify": "^1.1.0",
-    "constants-browserify": "^1.0.0",
     "crypto-js": "^3.1.9-1",
-    "dns.js": "^1.0.1",
-    "domain-browser": "^1.1.1",
     "emittery": "^0.5.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
     "events": "^1.0.0",
-    "https-browserify": "~0.0.0",
     "husky": "^4.2.1",
     "moment": "^2.22.2",
-    "path-browserify": "0.0.0",
-    "pokemon": "^1.2.3",
-    "process": "^0.11.0",
     "prop-types": "^15.6.2",
-    "punycode": "^1.2.4",
     "qrcode": "^1.4.4",
-    "querystring-es3": "~0.2.0",
     "ramda": "^0.26.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "0.61.5",
     "react-native-camera": "^3.15.1",
-    "react-native-crypto": "^2.2.0",
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-picker": "^2.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-overlay": "^1.3.1",
-    "react-native-os": "^1.0.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.7.0",
@@ -66,8 +45,6 @@
     "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^11.0.1",
-    "react-native-tcp": "^3.2.1",
-    "react-native-udp": "^3.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.4.1",
@@ -77,16 +54,9 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^2.2.0",
-    "stream-browserify": "^1.0.0",
-    "string_decoder": "~0.10.25",
+    "stream": "^0.0.2",
     "timers": "^0.1.1",
-    "timers-browserify": "^1.0.1",
-    "tty-browserify": "0.0.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
-    "url": "~0.10.1",
-    "util": "~0.10.3",
-    "uuid": "^3.3.2",
-    "vm-browserify": "0.0.4",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -96,6 +66,8 @@
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^4.3.0",
@@ -113,8 +85,7 @@
     "prettier": "^1.19.1",
     "react-test-renderer": "16.9.0",
     "redux-mock-store": "^1.5.4",
-    "resolve": "^1.15.0",
-    "rn-nodeify": "^10.2.0"
+    "resolve": "^1.15.0"
   },
   "jest": {
     "preset": "react-native",
@@ -129,59 +100,7 @@
       "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-navigation-header-buttons|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera)/)"
+      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera)/)"
     ]
-  },
-  "react-native": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false
-  },
-  "browser": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false
   }
 }
