--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -52,6 +52,7 @@
     "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "stream": "^0.0.2",
