--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/async-storage": "^1.7.0",
     "@react-native-community/masked-view": "^0.1.6",
     "apisauce": "^1.1.1",
+    "ed2curve": "^0.2.1",
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
