--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/bottom-tabs": "^5.2.6",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "apisauce": "^1.1.1",
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
@@ -34,23 +37,21 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-camera": "^3.15.1",
     "react-native-fs": "^2.16.2",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-randombytes": "^3.5.3",
-    "react-native-reanimated": "^1.7.0",
-    "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.5.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
