--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "postinstall": "jetifier -r",
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
     "build:release": "android/gradlew assembleRelease"
@@ -16,10 +17,10 @@
     "@react-native-community/async-storage": "^1.7.0",
     "@react-native-community/masked-view": "^0.1.6",
     "apisauce": "^1.1.1",
-    "ed2curve": "^0.2.1",
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
+    "ed2curve": "^0.2.1",
     "emittery": "^0.5.1",
     "events": "^1.0.0",
     "husky": "^4.2.1",
@@ -85,6 +86,7 @@
     "eslint-plugin-react": "^7.14.3",
     "flow-bin": "0.105.0",
     "jest": "^25.1.0",
+    "jetifier": "^1.6.5",
     "lint-staged": "^10.0.2",
     "metro-react-native-babel-preset": "^0.58.0",
     "mock-async-storage": "^2.2.0",
