--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -43,14 +43,13 @@
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.29",
+    "react-native-screens": "^2.5.0",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
