--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -140,6 +140,8 @@ android {
         versionCode 11
         versionName "2.6.1"
         multiDexEnabled true
+        testBuildType System.getProperty('testBuildType', 'debug')  // This will later be used to control the test apk build type
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     signingConfigs {
         debug {
@@ -207,6 +209,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    androidTestImplementation('com.wix:detox:+')
 }
 
 // Run this once to be able to run the application with BUCK
