--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -20,6 +20,7 @@
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
+    "detox": "^16.3.0",
     "ed2curve": "^0.2.1",
     "emittery": "^0.5.1",
     "events": "^1.0.0",
@@ -108,5 +109,26 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker)/)"
     ]
+  },
+  "detox": {
+    "configurations": {
+      "android.emu.debug": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Pixel_2_XL_API_28"
+        }
+      },
+      "android.emu.release": {
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Pixel_2_XL_API_28"
+        }
+      }
+    },
+    "test-runner": "jest"
   }
 }
