--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -48,6 +48,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-overlay": "^1.3.1",
+    "react-native-notifications": "^3.2.0",
     "react-native-popup-menu": "^0.15.6",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.8.0",
