--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -217,8 +217,11 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     implementation project(":react-native-notifications")
-    implementation "com.google.firebase:firebase-core:17.2.2"
-    implementation "com.google.firebase:firebase-analytics:17.2.2"
+      // Add the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+
+    // Add the SDK for Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
