--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.62.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-camera": "^3.15.1",
+    "react-native-dropdownalert": "^4.2.1",
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.31.1",
