--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -25,3 +25,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2560m
