--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -41,6 +41,7 @@
     "react-dom": "16.11.0",
     "react-native": "0.62.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-barcode-mask": "^1.2.2",
     "react-native-camera": "^3.15.1",
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.6.1",
