--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -3,8 +3,9 @@
 buildscript {
     ext {
         minSdkVersion = 18
-        compileSdkVersion = 28
-        targetSdkVersion = 28
+        buildToolsVersion = "29.0.3"
+        compileSdkVersion = 29
+        targetSdkVersion = 29
         kotlinVersion = '1.3.41'
     }
     repositories {
