--- a/BrightID/ios/BrightID/BrightID.entitlements
+++ b/BrightID/ios/BrightID/BrightID.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>webcredentials:explorer.brightid.org</string>
+		<string>applinks:app.brightid.org</string>
 	</array>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
 	<true/>
