--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
+    "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "@reduxjs/toolkit": "^1.4.0",
