--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -79,6 +79,7 @@
     "react-native-status-bar-height": "2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "2.15.2",
+    "react-native-url-polyfill": "^1.2.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
