--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -24,12 +24,20 @@ target 'BrightID' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  # use_flipper!
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  #   installer.pods_project.targets.each do |target|
+  #     target.build_configurations.each do |config|
+  #     config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+  #     end
+  #   end
+  # end
+
   post_install do |installer|
-    flipper_post_install(installer)
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+        config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
       end
     end
   end
