--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -93,7 +93,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.12.5",
-    "@mermaid-js/mermaid-cli": "^8.8.2-beta.8",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-eslint": "^10.0.3",
@@ -124,6 +123,9 @@
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "^1.5.4",
     "resolve": "^1.15.0"
+  },
+  "optionalDependencies": {
+     "@mermaid-js/mermaid-cli": "^8.9.0"
   },
   "jest": {
     "preset": "react-native",
