--- a/BrightID/.flowconfig
+++ b/BrightID/.flowconfig
@@ -45,9 +45,7 @@ suppress_type=$FlowFixMe
 suppress_type=$FlowFixMeProps
 suppress_type=$FlowFixMeState
 
-suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe\\($\\|[^(]\\|(\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native\\(_ios\\)?_\\(oss\\|fb\\)[a-z,_]*\\)?)\\)
-suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native\\(_ios\\)?_\\(oss\\|fb\\)[a-z,_]*\\)?)\\)?:? #[0-9]+
-suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
+sharedmemory.heap_size=3221225472
 
 [lints]
 sketchy-null-number=warn
@@ -69,6 +67,3 @@ unclear-type
 unsafe-getters-setters
 untyped-import
 untyped-type-import
-
-[version]
-^0.122.0
