--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -113,7 +113,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
-    "flow-bin": "0.122.0",
+    "flow-bin": "^0.144.0",
     "flow-typed": "^3.2.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
