--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -93,9 +93,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-syntax-export-default-from": "^7.12.13",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.1",
+    "@types/react-native": "^0.63.48",
+    "@types/react-test-renderer": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
@@ -105,17 +112,17 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "flow-bin": "^0.144.0",
-    "flow-typed": "^3.2.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "metro-react-native-babel-preset": "^0.65.0",
@@ -123,7 +130,8 @@
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "^1.5.4",
-    "resolve": "^1.15.0"
+    "resolve": "^1.15.0",
+    "typescript": "^4.1.5"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
