--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -100,7 +100,10 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-native": "^0.63.48",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.0",
+    "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.0.3",
