--- a/BrightID/tsconfig.json
+++ b/BrightID/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
@@ -10,8 +11,15 @@
     ],
     "moduleResolution": "node",
     "noEmit": true,
+    "noImplicitAny": false,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+    },
   },
   "exclude": [
     "node_modules",
@@ -19,10 +27,4 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "baseUrl": ".",
-  "paths": {
-    "@": [
-      "src/*"
-    ],
-  },
 }
