--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -103,6 +103,7 @@
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.15.0",
