--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -98,6 +98,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@types/jest": "^26.0.20",
+    "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.1",
     "@types/react-native": "^0.63.48",
     "@types/react-native-vector-icons": "^6.4.6",
