--- a/BrightID/tsconfig.json
+++ b/BrightID/tsconfig.json
@@ -17,13 +17,13 @@
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     "isolatedModules": true, /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
     /* Strict Type-Checking Options */
-    "strict": false,
+    "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": false, /* Enable strict null checks. */
     "strictFunctionTypes": false, /* Enable strict checking of function types. */
     "strictPropertyInitialization": false, /* Enable strict checking of property initialization in classes. */
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
-    "alwaysStrict": false,
+    // "alwaysStrict": false,
     /* Additional Checks */
     "noUnusedLocals": false, /* Report errors on unused locals. */
     // "noUnusedParameters": true,            /* Report errors on unused parameters. */
